--- a/order/style.css
+++ b/order/style.css
@@ -113,7 +113,7 @@ button { cursor: pointer; }
 }
 .category-bar button:hover {
   transform: translateY(-1px);
-  box-shadow: 0 4px 10px rgba(0,0,0,0.10);
+  box-shadow: 0 3px 6px rgba(141, 182, 0, 1);
   background: #8db600;
 }
 .category-bar .cat-emoji { font-size: 1.3rem; line-height: 1; }
@@ -153,7 +153,7 @@ button { cursor: pointer; }
   border-radius: 10px;
   margin-bottom: 1em;
   border: 2px solid #8db600;
-  box-shadow: 0 10px 15px #8db600;
+  box-shadow: 0 10px 15px rgba(141, 182, 0, 1);
 }
 .cart-items { margin-top: 10px; }
 .card-title { margin-top: 0; }
