--- a/order/style.css
+++ b/order/style.css
@@ -54,10 +54,10 @@ button { cursor: pointer; }
 
 /* Buttons */
 .btn.primary {
-  background: #fff;
+  background: #8db600;
   color: #000;
-  border: 2px solid #8db600;
-  padding: 8px 14px;
+  border: 1px solid #ffff;
+  padding: 8px 10px;
   border-radius: 6px;
   transition: transform .12s ease;
 }
